13928
The following code includes a method with a dependent type. It should normally typecheck (when using the option -Xexperimental of the Scala compiler).
```scala
object Bug {
  class C { type T }
  def foo(x: Int)(y: C)(z: y.T) {}
  foo(3)(new C { type T = String })("hello")
}
```

However the compiler (version 2.7.2.final) signals the following
error.
```scala
bug.scala:4: error: type mismatch;
 found   : java.lang.String("hello")
 required: Int(3)#T
  foo(3)(new C { type T = String })("hello")
                                    ^
```

In the application of the method foo, when determining the expected type of the third argument (which, according to the method signature, refers to the second argument), the typechecher wrongly uses the first argument, of type Int.
